--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="auth-card">
             <div class="form-branding">
                 <div class="video-background-wrapper"><video playsinline autoplay muted loop><source src="videos/auth-video.mp4" type="video/mp4"></video></div>
-                <!-- FIXED: Corrected logo path -->
+                <!-- logo path -->
                 <div class="branding-content"><img src="images/logo.svg.svg" alt="Carelyst Logo"><h2>Welcome Back</h2><p>Login to access your health dashboard.</p></div>
             </div>
             <div class="form-content">
